--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.9.2",
     "react-icons-kit": "^1.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
+    "react-time-picker": "^4.0.1",
     "react-toastify": "^6.0.9"
   },
   "scripts": {
